Add reference for unicycle model

--- a/docs/source/bibliography/biblio.bib
+++ b/docs/source/bibliography/biblio.bib
@@ -78,3 +78,12 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV}
 }
+
+@book{unicycle,
+    title = {MODERN ROBOTICS - MECHANICS, PLANNING, AND CONTROL},
+    isbn = {978110715630},
+    publisher = {Cambridge University Press},
+    author = {Kevin M. Lynch and Frank C. Park},
+    year = {2017},
+    pages = {521-523}
+}
